# ohmygit

./: .gitignore  README.md  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/api/: Cargo.toml
backend/api/src/: main.rs
backend/api/src/handlers/: mod.rs  repository.rs  template.rs  user.rs
backend/api/src/routes/: health.rs  mod.rs  repository.rs  templates.rs  user.rs
backend/application/: Cargo.toml
backend/application/src/: lib.rs
backend/application/src/authorization/: service.rs
backend/application/src/organizations/: read.rs
backend/application/src/repository/: auth.rs  branch.rs  create.rs  mod.rs  read.rs  service.rs  template.rs
backend/application/src/repository/branch/: create.rs  handler.rs  mod.rs
backend/application/src/repository/git/: advertise.rs  clone.rs  constants.rs  format.rs  mod.rs  push.rs  run.rs
backend/application/src/templates/: dashboard.rs  mod.rs  repository.rs
backend/application/src/tests/: mock.rs  mod.rs  repository_service_test.rs
backend/application/src/user/: create.rs  login.rs  mod.rs  read.rs  service.rs  signup.rs
backend/domain/: Cargo.toml
backend/domain/src/: lib.rs  models.rs  schema.rs
backend/domain/src/authorization/: model.rs  store.rs
backend/domain/src/filesystem/: mod.rs
backend/domain/src/membership/: model.rs  store.rs
backend/domain/src/organization/: model.rs
backend/domain/src/repository/: git_store.rs  mod.rs  model.rs  store.rs
backend/domain/src/request/: auth.rs  mod.rs  organization.rs  repo.rs  repository.rs
backend/domain/src/response/: auth.rs  health.rs  mod.rs  organization.rs  repository.rs
backend/domain/src/tests/: mod.rs
backend/domain/src/user/: mod.rs  model.rs  store.rs
backend/error/: Cargo.toml
backend/error/src/: lib.rs
backend/infrastructure/: Cargo.toml
backend/infrastructure/migrations/2025-04-02-145354_initial_schema/: down.sql  up.sql
backend/infrastructure/migrations/2025-04-03-135449_dev_sample_data/: down.sql  up.sql
backend/infrastructure/src/: filesystem.rs  lib.rs
backend/infrastructure/src/diesel/: authorization_store.rs  connection.rs  membership_store.rs  mod.rs  repository_store.rs  user_store.rs
backend/infrastructure/src/git2/: git_repository_store.rs  mod.rs
backend/shared/: Cargo.toml
backend/shared/src/: crypto.rs  graceful.rs  lib.rs  regex.rs  state.rs
backend/state/: Cargo.toml
backend/state/src/: lib.rs
backend/templating/: Cargo.toml
backend/templating/src/: lib.rs
backend/templating/templates/: base.html  create_repository.html  dashboard.html  repository.html
deployment/html/: index.html
deployment/vhost.d/: git.ohmygit.site  ohmygit.site
domain/: Cargo.toml
domain/src/: models.rs
frontend/: dashboard.html  entrypoint.sh  index.html  login.html  nginx.conf  repository.html  script.js  signup.html  styles.css
frontend/dev/: Dockerfile
frontend/prod/: Dockerfile  nginx.conf
frontend/script/: create_repository.js  dashboard.js  login.js  repository.js  signup.js
frontend/static/: login.html
frontend/static/script/: common.js  create_repository.js  repository.js
frontend/static/styles/: base.css  create_repository.css
frontend/styles/: base.css  create_repository.css  dashboard.css  repository.css  styles.css
git_repos/paul/ohmygit.git/: config  packed-refs
git_repos/paul/ohmygit.git/objects/pack/: pack-41333ba362185820d0c03b352062b0d4a31b637f.idx  pack-41333ba362185820d0c03b352062b0d4a31b637f.pack  pack-41333ba362185820d0c03b352062b0d4a31b637f.rev
git_repos/paul/ohmygit.git/refs/heads/: master
git_repos/paul/rust-learning.git/: config  packed-refs
git_repos/paul/rust-learning.git/objects/pack/: pack-44b293320b914a9d994688fd1ee186ad18920123.idx  pack-44b293320b914a9d994688fd1ee186ad18920123.pack  pack-44b293320b914a9d994688fd1ee186ad18920123.rev
infrastructure/: diesel.toml
infrastructure/migrations/2025-04-02-145354_initial_schema/: up.sql
infrastructure/migrations/2025-04-03-135449_dev_sample_data/: up.sql
