[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
infrastructure = { path = "../infrastructure" }
application = { path = "../application" }
domain = {path = "../domain"}
shared = { path = "../shared" }

axum = "0.8.4"
tokio = { version = "1.44.1", features = ["full"] }
anyhow = "1.0.97"
tower-http = { version = "0.6.2", features = ["catch-panic", "cors", "trace"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }