[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
infrastructure = { path = "../infrastructure" }
application = { path = "../application" }
domain = {path = "../domain"}
error = { path = "../error" }
state = { path = "../state" }
shared = { path = "../shared" }
templating = { path = "../templating" }

axum = "0.8.4"
axum-macros = "0.5.0"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
tokio = { version = "1.45.0", features = ["full"] }
anyhow = "1.0.97"
tower-http = { version = "0.6.2", features = ["catch-panic", "cors", "trace"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
tower-sessions = "0.14.0"
time = "0.3.41"
http = "1.3.1"
uuid = { version = "1.16.0", features = ["serde"] }
askama = { version = "0.14.0", features = ["serde_json"] }