[package]
name = "application"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../domain" }
shared = { path = "../shared" }
error = { path = "../error" }
templating = { path = "../templating" }

tokio = { version = "1.45.0", features = ["full"] }
axum = "0.8.4"
tracing = "0.1.41"
uuid = { version = "1.16.0", features = ["v7"] }