[package]
name = "application"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../domain" }
shared = { path = "../shared" }
error = { path = "../error" }
templating = { path = "../templating" }

tokio = { version = "1.45.0", features = ["full"] }
axum = "0.8.4"
async-trait = "0.1.88"
tracing = "0.1.41"
chrono = { version = "0.4.40", features = ["serde"] }
uuid = { version = "1.16.0", features = ["v7", "v4"] }
mockall = "0.13.1"
diesel = "2.2.8"
git2 = "0.20.2"