[package]
name = "domain"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
diesel = { version = "2.2.8", features = ["postgres", "chrono", "uuid", "postgres_backend"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4.40", features = ["serde"] }
uuid = { version = "1.16.0", features = ["serde"] }