[package]
name = "error"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
diesel = { version = "2.2.8", features = ["postgres"] }
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
serde_json = "1.0.140"
anyhow = "1.0.97"
tokio = "1.44.1"
argon2 = { version = "0.5.3", features = ["password-hash"] }
git2 = "0.20.2"
askama = "0.14.0"