[package]
name = "infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.2.8", features = ["postgres"] }
tokio = { version = "1.44.1", features = ["full"] }
diesel_migrations = "2.2.0"
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
dotenvy = "0.15.7"
