[package]
name = "infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
error = { path = "../error" }
domain = { path = "../domain" }

tokio = { version = "1.45.0", features = ["full"] }
diesel = { version = "2.2.8", features = ["postgres"] }
diesel_migrations = "2.2.0"
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
dotenvy = "0.15.7"
git2 = "0.20.2"
chrono = { version = "0.4.40", features = ["serde"] }
async-trait = "0.1.88"
uuid = { version = "1.16.0", features = ["serde"] }